--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cachetools==5.3.0
 chardet==5.1.0
 click==8.1.3
 colorama==0.4.6
+coverage==7.2.2
 distlib==0.3.6
 dnspython==2.3.0
 exceptiongroup==1.1.0
@@ -15,6 +16,7 @@ MarkupSafe==2.1.2
 packaging==23.0
 platformdirs==3.1.1
 pluggy==1.0.0
+pymongo==4.3.3
 pyproject_api==1.5.1
 pytest==7.2.2
 tomli==2.0.1
