feat(models): create the model of document that will be inserted in mongodb

--- a/pytest.ini
+++ b/pytest.ini
@@ -28,3 +28,9 @@ markers=
     # test_GildedRose
 
     test_update_inventory: check the method that update correctly the new quality
+
+##### REPOSITORY #####
+
+    test_test_constructor: check the constructor of the models used to create a document in mondodb
+
+    test__to_collection: check the method that return a new document to insert it at MongoDB
