fix(pytest.ini): correct name of markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -31,6 +31,6 @@ markers=
 
 ##### REPOSITORY #####
 
-    test_test_constructor: check the constructor of the models used to create a document in mondodb
+    test_constructor: check the constructor of the models used to create a document in mondodb
 
-    test__to_collection: check the method that return a new document to insert it at MongoDB
+    test_to_collection: check the method that return a new document to insert it at MongoDB
