--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==22.2.0
+black==23.1.0
 cachetools==5.3.0
 chardet==5.1.0
 click==8.1.3
@@ -13,7 +14,9 @@ iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mypy-extensions==1.0.0
 packaging==23.0
+pathspec==0.11.1
 platformdirs==3.1.1
 pluggy==1.0.0
 pymongo==4.3.3
