--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,10 @@ markers=
 
 ##### Domain #####
 
+    # test_Item
+
+    test_repr: check the method that allow us to represent the object as wanted
+
     # test_NormalItem
 
     test_set_quality: check the method that update and set the new quality. 
