--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           black .
       - name: Test with pytest and coverage
+        with:
+          super_secret: ${{secrest.MONGO_ATLAS_URI}}
         run: |
           coverage run -m pytest
       - name: Coverage report
