--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           black .
       - name: Test with pytest and coverage
-        with:
+        env:
           super_secret: ${{secrets.MONGO_ATLAS_URI}}
         run: |
           coverage run -m pytest
