--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -32,7 +32,7 @@ jobs:
           black .
       - name: Test with pytest and coverage
         env:
-          super_secret: ${{secrets.MONGO_ATLAS_URI}}
+          secrets: ${{secrets.MONGO_ATLAS_URI}}
         run: |
           coverage run -m pytest
       - name: Coverage report
