--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -10,23 +10,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MONGO_ATLAS_URI: "${{ secrets.MONGO_ATLAS_URI }}"
-    strategy:
-      matrix:
-        python-version: ["3.10"]
+      MONGO_ATLAS_URI: '${{ secrets.MONGO_ATLAS_URI }}'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python v${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.10
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          export MONGO_ATLAS_URI="${{ secrets.MONGO_ATLAS_URI }}"
+          export MONGO_ATLAS_URI=${{ secrets.MONGO_ATLAS_URI }}
           echo $MONGO_ATLAS_URI
+          pip install black pytest
+          pip install -r requirements.txt
       - name: Black formatting
         run: |
           black .
