--- a/pytest.ini
+++ b/pytest.ini
@@ -35,6 +35,16 @@ markers=
 
 ##### REPOSITORY #####
 
-    test_constructor: check the constructor of the models used to create a document in mondodb
+    # test_models
 
+    test_constructor: check the constructor of the models used to create a document in mondodb
     test_to_collection: check the method that return a new document to insert it at MongoDB
+
+    # test_Database
+
+
+    test_db_connection: check the connection to MongoDB
+    test_get_client: check that the client correctly works
+    test_get_database: check that the database is correctly set
+    test_correct_item: check that the item is check correclty
+    test_insert_item: check that the insert item works well
