feat(inventory): correctly return the inventory

--- a/pytest.ini
+++ b/pytest.ini
@@ -48,3 +48,4 @@ markers=
     test_get_database: check that the database is correctly set
     test_correct_item: check that the item is check correclty
     test_insert_item: check that the insert item works well
+    test_get_inventory: check that the database returns the correct inventory
