test(update_one): add test to check the method that updates one document

--- a/pytest.ini
+++ b/pytest.ini
@@ -49,3 +49,5 @@ markers=
     test_correct_item: check that the item is check correclty
     test_insert_item: check that the insert item works well
     test_get_inventory: check that the database returns the correct inventory
+    test_get_item: check that mongo return correclty one document
+    test_delete_item: check that mongo correcly delete one document
