docs(pytest): explain the method last added

--- a/pytest.ini
+++ b/pytest.ini
@@ -51,3 +51,5 @@ markers=
     test_get_inventory: check that the database returns the correct inventory
     test_get_item: check that mongo return correclty one document
     test_delete_item: check that mongo correcly delete one document
+    test_update_item: check that it can be modified all the correct keys in mongo
+    test_set_working_collection: check that the working collection is set and get correctly 
