fear(to_object): create method to instanciate classes for objects

--- a/pytest.ini
+++ b/pytest.ini
@@ -39,6 +39,7 @@ markers=
 
     test_constructor: check the constructor of the models used to create a document in mondodb
     test_to_collection: check the method that return a new document to insert it at MongoDB
+    test_to_object: check the method that retrun an object with the class that is needed
 
     # test_Database
 
