docs(pytest): add information about the test about service

--- a/pytest.ini
+++ b/pytest.ini
@@ -43,7 +43,6 @@ markers=
 
     # test_Database
 
-
     test_db_connection: check the connection to MongoDB
     test_get_client: check that the client correctly works
     test_get_database: check that the database is correctly set
@@ -54,3 +53,12 @@ markers=
     test_delete_item: check that mongo correcly delete one document
     test_update_item: check that it can be modified all the correct keys in mongo
     test_set_working_collection: check that the working collection is set and get correctly 
+
+
+##### Services ######
+
+    test_create_one: test the method that interact with database but separatly to create a document 
+    test_get_one: test the method that interact with database but separatly to get a document
+    test_get_inventory: test the method that interact with database but separatly to get the entire collection
+    test_update_one: test the method that interact with database but separatly to update a document
+    test_delete_one: test the method that interact with database but separatly to delete a document
