feat(init_db):add new method to init the database with the inventory

--- a/pytest.ini
+++ b/pytest.ini
@@ -53,6 +53,7 @@ markers=
     test_delete_item: check that mongo correcly delete one document
     test_update_item: check that it can be modified all the correct keys in mongo
     test_set_working_collection: check that the working collection is set and get correctly 
+    test_init_db: drop and create the database correcly
 
 
 ##### Services ######
@@ -62,3 +63,7 @@ markers=
     test_get_inventory: test the method that interact with database but separatly to get the entire collection
     test_update_one: test the method that interact with database but separatly to update a document
     test_delete_one: test the method that interact with database but separatly to delete a document
+
+##### Resources #####
+
+    test_inventario: test the first endpoint that return the full inventory
