--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==9.0.1
 attrs==22.2.0
 black==23.1.0
 cachetools==5.3.0
@@ -10,6 +11,7 @@ dnspython==2.3.0
 exceptiongroup==1.1.0
 filelock==3.10.0
 Flask==2.2.3
+Flask-RESTful==0.3.9
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -22,6 +24,8 @@ pluggy==1.0.0
 pymongo==4.3.3
 pyproject_api==1.5.1
 pytest==7.2.2
+pytz==2022.7.1
+six==1.16.0
 tomli==2.0.1
 tox==4.4.7
 virtualenv==20.21.0
