feat(inventory/update): create the enpoint to update the inventory

--- a/pytest.ini
+++ b/pytest.ini
@@ -54,6 +54,7 @@ markers=
     test_update_item: check that it can be modified all the correct keys in mongo
     test_set_working_collection: check that the working collection is set and get correctly 
     test_init_db: drop and create the database correcly
+    test_read_one: test read one
 
 
 ##### Services ######
