--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dnspython==2.3.0
 exceptiongroup==1.1.0
 filelock==3.10.0
 Flask==2.2.3
+Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 iniconfig==2.0.0
 itsdangerous==2.1.2
