test(items/Inventory): add test to check the endpoints

--- a/pytest.ini
+++ b/pytest.ini
@@ -61,4 +61,11 @@ markers=
 
 ##### Resources #####
 
-    test_inventario: test the first endpoint that return the full inventory
+    # Inventory
+
+    test_inventory: test the endpoint that return the full inventory
+
+    # Items
+
+    test_get_item: test the endpoint that return an item
+    test_delete_item: test the endpoint that delete an item
