--- a/pytest.ini
+++ b/pytest.ini
@@ -64,8 +64,11 @@ markers=
     # Inventory
 
     test_inventory: test the endpoint that return the full inventory
+    test_update_inventory: test the endpoint that update correcly the inventory
 
     # Items
 
     test_get_item: test the endpoint that return an item
     test_delete_item: test the endpoint that delete an item
+    test_create_item: test the endpoint that insert an item
+    test_update_item: test the endpoint that update an item
