docs(pytest.ini): add information about test cases

--- a/pytest.ini
+++ b/pytest.ini
@@ -39,7 +39,9 @@ markers=
 
     test_constructor: check the constructor of the models used to create a document in mondodb
     test_to_collection: check the method that return a new document to insert it at MongoDB
-    test_update_statement: check the method that correct update statement
+    test_update_statement: check the method that return the statement to update
+    test_correct_json: check the method that correct update statement
+	test_correct_update_statement: check the method that validate if a update statement is correct
 
     # test_Database
 
@@ -48,8 +50,6 @@ markers=
     test_update_one: test the method to update a document
     test_delete_one: test the method to delete a document
     test_inventory: test the method that return the inventory
-
-
 
 ##### Services ######
 
