--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aniso8601==9.0.1
 attrs==22.2.0
+bandit==1.7.5
 black==23.1.0
 cachetools==5.3.0
 chardet==5.1.0
@@ -13,20 +14,30 @@ filelock==3.10.0
 Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
+gitdb==4.0.10
+GitPython==3.1.31
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+mdurl==0.1.2
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.1
+pbr==5.11.1
 platformdirs==3.1.1
 pluggy==1.0.0
+Pygments==2.14.0
 pymongo==4.3.3
 pyproject_api==1.5.1
 pytest==7.2.2
 pytz==2022.7.1
+PyYAML==6.0
+rich==13.3.2
 six==1.16.0
+smmap==5.0.0
+stevedore==5.0.0
 tomli==2.0.1
 tox==4.4.7
 virtualenv==20.21.0
