ci(): add more configuration about ci, tox and bandit

--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,4 @@ commands =
     black .
     coverage run -m pytest
     coverage report -m
-    bandit ./domain ./repository ./resources ./services
+    bandit -r ./domain ./repository ./services ./resources -o ./doc/bandit_report.txt
