ci(): add more configuration about ci, tox and bandit GITHUB actins

--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -33,3 +33,7 @@ jobs:
       - name: Coverage report
         run:
           coverage report
+      - name: Tox and bandit
+        run:
+          tox
+
