fix(Dockerfile): correct Dockerfile to add new env variable

--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Coverage report
         run:
           coverage report
-      - name: Tox and bandit
+      - name: Tox
         run:
           tox
