--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,43 @@
 #
 #    pip-compile requirements.in
 #
+attrs==22.2.0
+    # via pytest
+black==23.1.0
+    # via -r requirements.in
+cachetools==5.3.0
+    # via tox
+chardet==5.1.0
+    # via tox
 click==8.1.3
-    # via flask
+    # via
+    #   black
+    #   flask
 colorama==0.4.6
-    # via click
+    # via
+    #   click
+    #   pytest
+    #   tox
+coverage==7.2.2
+    # via -r requirements.in
+distlib==0.3.6
+    # via virtualenv
 dnspython==2.3.0
     # via pymongo
+exceptiongroup==1.1.1
+    # via pytest
+filelock==3.10.7
+    # via
+    #   tox
+    #   virtualenv
 flask==2.2.3
     # via
     #   -r requirements.in
     #   flask-cors
 flask-cors==3.0.10
     # via -r requirements.in
+iniconfig==2.0.0
+    # via pytest
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
@@ -24,9 +49,42 @@ markupsafe==2.1.2
     # via
     #   jinja2
     #   werkzeug
+mypy-extensions==1.0.0
+    # via black
+packaging==23.0
+    # via
+    #   black
+    #   pyproject-api
+    #   pytest
+    #   tox
+pathspec==0.11.1
+    # via black
+platformdirs==3.2.0
+    # via
+    #   black
+    #   tox
+    #   virtualenv
+pluggy==1.0.0
+    # via
+    #   pytest
+    #   tox
 pymongo==4.3.3
+    # via -r requirements.in
+pyproject-api==1.5.1
+    # via tox
+pytest==7.2.2
     # via -r requirements.in
 six==1.16.0
     # via flask-cors
+tomli==2.0.1
+    # via
+    #   black
+    #   pyproject-api
+    #   pytest
+    #   tox
+tox==4.4.7
+    # via -r requirements.in
+virtualenv==20.21.0
+    # via tox
 werkzeug==2.2.3
     # via flask
