--- a/.github/workflows/auto_actions.yml
+++ b/.github/workflows/auto_actions.yml
@@ -1,38 +1,38 @@
-name: Ollivander shop
+name: Ollivander Shop
 
-env:
-  MONGO_ATLAS_URI: ${{ secrets.MONGO_ATLAS_URI }}
-on: 
+on:
   push:
     branches:
       - main
       - develop
 
-
 jobs:
   build:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python v${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-      - name: Install dependencies
+
+      - name: Set up Docker Compose
         run: |
-          python -m pip install --upgrade pip
-          export MONGO_ATLAS_URI=${{ secrets.MONGO_ATLAS_URI }}
-          pip install black pytest
-          pip install -r requirements.txt
-      - name: Black formatting
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Build and run Docker Compose
         run: |
-          black .
-      - name: Test with pytest and coverage
+          docker-compose up -d --build
+
+      - name: Run tests
         run: |
-          coverage run -m pytest
+          docker-compose exec -T api-development pytest --cov="ollivanders-app" --cov-fail-under=90
+
+      - name: Run code formatting check
+        run: |
+          docker-compose exec -T api-development black --check .
+
       - name: Coverage report
-        run:
-          coverage report
-      - name: Tox
-        run:
-          tox
+        run: |
+          docker-compose exec -T api-development coverage report
+
+      - name: Shut down Docker Compose
+        run: |
+          docker-compose down
